Let the caret go outside of text frames (particularly when whitespace is trimmed).  b=235223  r=mrbkap  sr=bzbarsky